# web-old

./: .env  .gitignore  Dockerfile.seed  LICENSE  README.md  WORKSPACE  docker-compose.yml  go.mod  package.json  svelte.config.js  tailwind.config.cjs
prisma/: db-diagram.drawio  manualSeed.ts  schema.prisma  seed.ts  types.ts
src/: app.html  app.postcss
src/routes/: index.svelte
tools/migrator/: BUILD.bazel  main.go
tools/migrator/db/: BUILD.bazel
