load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db_gen.go",
        "query-engine-darwin_gen.go",
        "query-engine-linux_gen.go",
    ],
    importpath = "github.com/TheOpenDictionary/odict-web/tools/migrator/db",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_iancoleman_strcase//:go_default_library",
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_prisma_prisma_client_go//engine:go_default_library",
        "@com_github_prisma_prisma_client_go//engine/mock:go_default_library",
        "@com_github_prisma_prisma_client_go//runtime/builder:go_default_library",
        "@com_github_prisma_prisma_client_go//runtime/lifecycle:go_default_library",
        "@com_github_prisma_prisma_client_go//runtime/raw:go_default_library",
        "@com_github_prisma_prisma_client_go//runtime/transaction:go_default_library",
        "@com_github_prisma_prisma_client_go//runtime/types:go_default_library",
        "@com_github_shopspring_decimal//:go_default_library",
        "@com_github_takuoki_gocase//:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_prisma_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@com_github_prisma_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@com_github_prisma_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_prisma_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
